--- a/css/card1.css
+++ b/css/card1.css
@@ -3,6 +3,14 @@
   margin: 0 auto;
   margin-left: 0;
 }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
+  border: none;
+  text-decoration: none;
+}
 
 /*-------------------------------------------------------
   -------------------------------------------------------
