--- a/css/style.css
+++ b/css/style.css
@@ -16,29 +16,11 @@
 html {
   scroll-behavior: smooth;
 }
-/* width */
-::-webkit-scrollbar {
-  width: 10px;
-}
-::-webkit-scrollbar-thumb {
-  background-color: var(--bg); /* Atau var(--primary) */
-  border-radius: 8px;
-}
 
-/* Warna track */
-::-webkit-scrollbar-track {
-  background-color: var(--third); /* Warna yang lebih muda dari --bg */
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: var(--primary);
-}
 body {
   font-family: "Poppins", sans-serif;
   background-color: var(--bg);
   color: rgb(255, 255, 255);
-  min-height: 2000rem;
 }
 .navbar1 {
   display: flex;
@@ -109,7 +91,7 @@ body {
   min-height: 100vh;
   display: flex;
   align-items: center;
-  background-image: url("images/Background61.png");
+  background-image: url("../images/Background61.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -119,14 +101,14 @@ body {
 .hero1::after {
   content: "";
   display: block;
-  height: 30%;
+  height: 20%;
   width: 100%;
   bottom: 0;
   position: absolute;
   background: linear-gradient(
     0deg,
-    rgb(101, 204, 183) 9%,
-    rgba(214, 209, 209, 0) 55%
+    rgb(101, 204, 183) 15%,
+    rgba(214, 209, 209, 0) 60%
   );
 }
 .hero1 .content1 {
@@ -135,15 +117,17 @@ body {
 }
 
 .hero1 .content1 h1 {
-  color: rgb(242, 242, 242);
+  color: var(--second);
   font-size: 4.5rem;
-  line-height: 1.1;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
 }
 .hero1 .content1 h1 span {
-  color: var(--second);
   font-style: italic;
   font-size: 4.5rem;
+  background-image: url(../images/bg-2.jpg);
+  background-size: cover;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
 }
 .hero1 .content1 p {
   color: var(--primary);
@@ -153,7 +137,7 @@ body {
   font-weight: 400;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
 }
-.hero1 .content1 .cta1 {
+.hero1 .content1 .go {
   margin: 1rem;
   display: inline-block;
   padding: 1rem 3rem;
@@ -167,12 +151,14 @@ body {
 /* About section */
 .about1,
 .Menu,
-.music {
+.music,
+.contact {
   padding: 7rem 7% 1.4rem;
 }
 .about1 h2,
 .Menu h2,
-.music h2 {
+.music h2,
+.contact h2 {
   font-size: 2.5rem;
   color: var(--third);
   text-align: center;
@@ -180,7 +166,8 @@ body {
 }
 .about1 h2 span,
 .Menu h2 span,
-.music h2 span {
+.music h2 span,
+.contact h2 span {
   color: var(--primary);
 }
 .about1 .row1 {
@@ -192,6 +179,7 @@ body {
 .about1 .row1 .about-img1 img {
   width: 75%;
   border-radius: 100%;
+  filter: drop-shadow(20px 25px 25px #000000);
 }
 .about1 .row1 .content1 {
   flex: 1 1 35rem;
@@ -213,6 +201,9 @@ body {
 Services Style
 --------------------------------------------- 
 */
+.Menu {
+  padding: 9rem 7% 1.4rem;
+}
 
 .services .naccs {
   position: relative;
@@ -356,6 +347,113 @@ Services Style
 .info .swiper-button-prev21:hover {
   color: var(--third);
 }
+
+/* contact */
+.contact .container1 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 5rem;
+}
+.contact .container {
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem;
+}
+.contact .container .row,
+.container1 .row {
+  text-align: center;
+  width: 30%;
+  margin-bottom: 2rem;
+}
+.contact .container .row img,
+.container1 .row img {
+  border-radius: 100%;
+  width: 50%;
+  cursor: pointer;
+}
+.contact .container .row img {
+  border-radius: 100%;
+  width: 50%;
+  height: 85%;
+  cursor: pointer;
+}
+/* Style for social icons container */
+.social-icons {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-around;
+  background-color: white;
+  padding: 5px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  z-index: 10;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.7s ease-in-out;
+}
+
+/* Style for social icons */
+.social-icons a {
+  text-decoration: none;
+  color: #333;
+  font-size: 20px;
+  margin: 0.4rem;
+  transition: color 0.2s;
+}
+
+.social-icons a:hover {
+  color: #1877f2;
+}
+.social-icons a i:hover {
+  filter: drop-shadow(0 0 10px rgba(2, 2, 255, 0.7))
+    drop-shadow(0 0 20px rgba(2, 2, 255, 0.5))
+    drop-shadow(0 0 30px rgba(2, 2, 255, 0.5));
+  transition: filter 0.3s ease-in-out;
+}
+/* Show social icons container when active class is added */
+.social-icons.active {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+/* Footer */
+footer {
+  background-color: var(--primary);
+  text-align: center;
+  padding: 1rem 0 3rem;
+  margin-top: 2rem;
+}
+footer .sosial {
+  padding: 0.5rem 0;
+}
+footer .sosial a {
+  margin: 1rem;
+  color: var(--third);
+}
+footer .sosial a:hover {
+  color: var(--bg);
+}
+footer .links a:hover {
+  color: var(--bg);
+}
+footer .links {
+  margin-bottom: 1.4rem;
+}
+footer .links a {
+  color: var(--third);
+  padding: 0.7rem 1rem;
+}
+footer .credit {
+  font-size: 1rem;
+}
+footer .credit a {
+  color: var(--bg);
+  font-weight: 700;
+}
+
 /* laptop */
 @media (max-width: 1366px) {
   html {
