--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ body {
   background-color: var(--bg);
   color: rgb(255, 255, 255);
 }
+
+link[rel="icon"] {
+  border-radius: 100%;
+}
 .navbar1 {
   display: flex;
   justify-content: space-between;
@@ -194,6 +198,7 @@ body {
   font-size: 1.4rem;
   font-weight: 400;
   line-height: 1.6;
+  text-align: justify;
 }
 
 /* 
@@ -460,6 +465,7 @@ footer .credit a {
     font-size: 75%;
   }
 }
+
 /* tablet */
 @media (max-width: 768px) {
   html {
@@ -499,7 +505,14 @@ footer .credit a {
   }
 
   .about1 .row1 .about-img1 img {
-    width: 100%;
+    width: 20rem;
+    height: 20rem;
+  }
+
+  .about1 .row1 .about-img1 {
+    padding-bottom: 5rem;
+    display: flex;
+    justify-content: center;
   }
 
   .services .naccs .menu {
@@ -537,9 +550,18 @@ footer .credit a {
     transition-delay: 0.3s;
     position: relative;
     border-radius: 15px;
-    padding: 80px 100px 50px 100px;
+
     display: flex;
+    justify-content: center;
     align-items: center;
+  }
+  .contact .container .row img,
+  .container1 .row img {
+    width: 7rem;
+    height: 7rem;
+  }
+  .services .naccs .menu div .thumb {
+    width: 6rem;
   }
 }
 /* mobile phone */
