--- a/css/dass.css
+++ b/css/dass.css
@@ -27,7 +27,7 @@ body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
   padding: 0;
-  background-image: url(../images/test2.jpg);
+  background-image: url(../images/8.jpg);
   background-size: cover;
   color: #333333;
   font-size: 16px;
@@ -184,6 +184,9 @@ form {
   background-color: #fff;
   padding: 1rem 1rem;
   border-radius: 1rem;
+}
+form .textinfo h1 {
+  text-align: center;
 }
 
 h3 {
