--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,17 @@ link[rel="icon"] {
 #hamburger-menu1 {
   display: none;
 }
-
+.chat {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 0.2em solid var(--second);
+  border-radius: 3rem;
+  padding: 0.1rem 1.1rem;
+}
+.chat:hover {
+  border: 0.2em solid var(--third);
+}
 /* hero section */
 .hero1 {
   min-height: 100vh;
@@ -492,6 +502,11 @@ footer .credit a {
     font-size: 2rem;
     left: 0%;
     margin: 1.5rem;
+  }
+  .navbar1 .navbar-extra1 {
+    width: 10rem;
+    display: flex;
+    align-items: center;
   }
   .navbar1 .navbar-nav1 a::after {
     transform-origin: 0 0;
